- Fixed some problems with /kline when removing a K:line
- Updated docs some more
- Fixed a makefile.win32.ssl problem reported by WeeD
- Changed version to beta13, updated docs
- Check for connect() success/failure in scanners on all OSs.
- Documentation updates
- Added back the commands check that didn't get added in conf3 (lamers
  beware)
- Fixed a typo in the module system
- Fixed exception in scanner on Windows
- Changed base version name to Unreal3.2, instead of Unreal3.2-Selene
- Made McSkaf part of core coder team
*** beta13 released ***
- Added set::htm to set HTM options via the config. set::htm is only valid if either
  commands.so or m_htm.so is loaded.
- Recoded some of +G to work MUCH faster. A compiled copy of the regex is now stored 
  in memory rather than compiling the regex each time the swear stripping was trigged. 
  This uses slightly more memory, but saves a signifigant amount of execution time.
  Idea inspired by a suggestion from CaliMonk
- Fixed a bug where makeconf was still included in make install 
- Fixed a bug reported by |Zerwas| where tsctl required all lowercase params (#0000537)
- Fixed a bug reported by |Zerwas| where forgetting to have an oper::flags would cause a 
  crash (#0000543)
- Added a max of 500:500 to +f (higher than this is just stupid), this fixes
  (#0000542) reported by BiGi
- Fixed a bug where included files were not added to the file list in the Config menu under
  win32. Reported by PoisonDart316 (#0000535)
- Added chmode +u to help.conf, reported by Jaw959 (#0000544)
- Fixed a docs typo 'channes' instead of 'channels' and a typo that said +I is limited to
  netadmins, reported by PoisonDart316 (#0000547), also removed /unkline and /unzline from
  the docs (replaced with /kline - and /zline -, also reported by PoisonDart316 (#0000548)
- Fixed bug with INET6 and find_tkline_zap (..)
- Fixed include bug
- Created StripControlCodes() and call it from stripbadwords() to fix bug 552